--- a/src/scss/components/header/header.scss
+++ b/src/scss/components/header/header.scss
@@ -17,11 +17,15 @@
            @include style-link;
            color: $body-primary-text-color;
         }
+        &__block-btn-menu{
+            text-align: center;
+        }
         &__btn-menu{
             @include style-primary-btn;
+            max-width: 328px;
             width: 100%;
             height: 48px;
-            font-size: 18px;
+            font-size: 18px; 
         }
         &__btn-burger{
             width: 24px;
@@ -62,7 +66,6 @@
             }
             .burger-menu-line{
                 transform: scale(1);
-                height: 2px;
             }
             &__lang{
                display: none;
@@ -110,6 +113,7 @@
                     padding: 0px 25px;
                     transform: translate(0%,0px);
                     transition: 500ms;
+                    overflow:visible;
                 }
                 .navigation-menu{
                     transform: translate(-100%,0px);
