--- a/src/scss/components/header/header.scss
+++ b/src/scss/components/header/header.scss
@@ -79,7 +79,7 @@
                 position: absolute;
                 background-color: #DEF2FF;
                 width: 100%;
-                height: 100%;
+                height: 100vw;
                 left: 0;
                 top: 0;
                 padding: 0px 25px;
@@ -149,7 +149,7 @@
             }
             &__list{
                 @include flex-container;
-                gap: calc(12px + (60 - 12) * ((100vw - 320px) / (1200 - 320)));
+                gap: adaptiv-indentation(12, 60, 320);
             }
             &__btn-menu{
                 @include style-primary-btn;
