--- a/src/scss/components/main/main.scss
+++ b/src/scss/components/main/main.scss
@@ -1,6 +1,7 @@
 .main{   
     .section-introductory{
-        padding-top: calc(28px + (94 - 28) * ((100vw - 320px) / (1200 - 320)));
+        padding-top: adaptiv-indentation(28, 94, 320);
+        
         &__title-text{
             font-weight: bold;
             @include adaptiv-font(48,24);
@@ -51,24 +52,21 @@
     &__title-text{
         @include style-text-titel;
         @include adaptiv-font(24,20);
-        padding-bottom: calc(32px + (75 - 32) * ((100vw - 320px) / (1200 - 320)));
-    }
-    &__block-with-all-cause{
-
+        padding-bottom: adaptiv-indentation(32, 75, 320);
     }
     &__block-cause{
         display: grid;
-        grid-template-columns: calc(48px + (80 - 48) * ((100vw - 320px) / (1200 - 320))) 1fr;
+        grid-template-columns: adaptiv-indentation(48, 80, 320) 1fr;
         align-items: center;
-        gap:  calc(16px + (0 - 16) * ((100vw - 320px) / (1200 - 320)));
+        gap: adaptiv-indentation(16, 0, 320);
         padding-bottom: 19px
     }
     &__icon{
-        max-width: calc(48px + (80 - 48) * ((100vw - 320px) / (1200 - 320)));
-        max-height: calc(48px + (80 - 48) * ((100vw - 320px) / (1200 - 320))); 
+        max-width: adaptiv-indentation(48, 80, 320);
+        max-height: adaptiv-indentation(48, 80, 320); 
     }
     &__text{
-        font-size: calc(14px + (16 - 14) * ((100vw - 320px) / (1200 - 320)));
+        font-size:adaptiv-indentation(14, 16, 320);
         line-height: 171%;
         color: $body-primary-text-color;
     }
@@ -80,7 +78,7 @@
         &__title-text{
             @include style-text-titel;
             padding-top: 47px;
-            padding-bottom: calc(22px + (38 - 22) * ((100vw - 320px) / (1200 - 320)))
+            padding-bottom:adaptiv-indentation(22, 38, 320);
         }
         &__block-with-action{
            @include flex-container;
@@ -90,8 +88,8 @@
             flex-direction: row-reverse;
          }
         &__img-info{
-           max-width: calc(127px + (187 - 127) * ((100vw - 320px) / (1200 - 320)));
-           max-height: calc(126px + (165 - 126) * ((100vw - 320px) / (1200 - 320)));
+           max-width: adaptiv-indentation(127, 187, 320);
+           max-height: adaptiv-indentation(126, 165, 320);
         }
         &__description-text{
             @include adaptiv-font(16,12);
@@ -106,7 +104,7 @@
             width: 100%;
             height: 48px;
             @include style-primary-btn;
-            margin-top: calc(21px + (26 - 21) * ((100vw - 320px) / (1200 - 320)));
+            margin-top: adaptiv-indentation(21, 26, 320);
         }
         &__dotted-line{
         display: none;
@@ -154,8 +152,8 @@
           display: grid;
           grid-template-columns: repeat(3,1fr);
           grid-template-rows: repeat(2,1fr);
-          column-gap: calc(2px + (160 - 2) * ((100vw - 320px) / (1200 - 320)));
-          row-gap: calc(10px + (87 - 10) * ((100vw - 320px) / (1200 - 320)));
+          column-gap: adaptiv-indentation(2, 160, 320);
+          row-gap: adaptiv-indentation(10, 87, 320);
         }
         &__block-cause{
            display: grid;
@@ -193,19 +191,19 @@
              }
              &__block-with-action:nth-child(1){
                 padding-top: 173px;
-                padding-right: calc(10px + (146 - 10) * ((100vw - 700px) / (1200 - 700)));
+                padding-right: adaptiv-indentation(10, 146, 700);
              }
              &__block-with-action:nth-child(2){
                 padding-top: 133px;
-                padding-right: calc(10px + (95 - 10) * ((100vw - 700px) / (1200 - 700)));
+                padding-right: adaptiv-indentation(10, 95, 700);
              }
              &__block-with-action:nth-child(3){
                 padding-top: 58px;
-                padding-right: calc(10px + (115 - 10) * ((100vw - 700px) / (1200 - 700)));
+                padding-right: adaptiv-indentation(10, 115, 700);
              }
             &__img-info{
-               max-width: calc(127px + (187 - 127) * ((100vw - 320px) / (1200 - 320)));
-               max-height: calc(126px + (165 - 126) * ((100vw - 320px) / (1200 - 320)));
+               max-width: adaptiv-indentation(127, 187, 320);
+               max-height: adaptiv-indentation(126, 165, 320);
             }
         }
     }
@@ -232,8 +230,8 @@
               display: grid;
               grid-template-columns: repeat(3,1fr);
               grid-template-rows: repeat(2,1fr);
-              column-gap: calc(2px + (160 - 2) * ((100vw - 320px) / (1200 - 320)));
-              row-gap: calc(10px + (87 - 10) * ((100vw - 320px) / (1200 - 320)));
+              column-gap: adaptiv-indentation(2, 160, 320);
+              row-gap: adaptiv-indentation(10, 87, 320);
             }
             &__block-cause{
                display: grid;
@@ -272,28 +270,28 @@
                 flex-direction: column;
              }
              &__block-with-action:nth-child(1){
-                padding-top: calc(210px + (260 - 210) * ((100vw - 993px) / (1400 - 993)));
-                padding-right: calc(10px + (170 - 10) * ((100vw - 700px) / (1200 - 700)));
+                padding-top: adaptiv-indentation(210, 240, 993);
+                padding-right: adaptiv-indentation(10, 170, 700);
              }
              &__block-with-action:nth-child(2){
-                padding-top: calc(160px + (190 - 160) * ((100vw - 993px) / (1400 - 993)));
-                padding-right: calc(10px + (75 - 10) * ((100vw - 700px) / (1200 - 700)));
+                padding-top: adaptiv-indentation(160, 175, 993);
+                padding-right: adaptiv-indentation(10, 75, 700);
              }
              &__block-with-action:nth-child(3){
                 padding-top: 58px;
-                padding-right: calc(10px + (90 - 10) * ((100vw - 700px) / (1200 - 700)));
+                padding-right: adaptiv-indentation(10, 90, 700);
              }
             &__img-info{
-               max-width: calc(127px + (187 - 127) * ((100vw - 320px) / (1200 - 320)));
-               max-height: calc(126px + (165 - 126) * ((100vw - 320px) / (1200 - 320)));
+               max-width: adaptiv-indentation(127, 190, 320);
+               max-height: adaptiv-indentation(126, 170, 320);
             }
             &__dotted-line{
                 display: block;
                 position: absolute;
-                top: calc(170px + (180 - 170) * ((100vw - 993px) / (1400 - 993)));
+                top: adaptiv-indentation(170, 175, 993);
                 left: 3%;
-                max-width: calc(998px + (1200 - 998) * ((100vw - 993px) / (1400 - 993)));
-               max-height: calc(281px + (350 - 281) * ((100vw - 993px) / (1400 - 993)));
+                max-width: adaptiv-indentation(998, 1200, 993);
+               max-height: adaptiv-indentation(281, 350, 993);
             }
         }
     }
