--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 @import "reset";
 @import "mixins";
+@import "function";
 @import "variables";
 @import "components/allComponents.scss";
 .container{
