--- a/src/scss/components/header/header.scss
+++ b/src/scss/components/header/header.scss
@@ -107,7 +107,7 @@
                     position: absolute;
                     background-color: #DEF2FF;
                     width: 100%;
-                    height: 100%;
+                    height: 150vh;
                     left: 0;
                     top: 0;
                     padding: 0px 25px;
