--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -31,6 +31,13 @@
     background-size: contain;
     background-repeat: no-repeat;
 }
+@mixin grade-style {
+    background-image: url("../img/main/asterisks.svg");
+    @include style-BG;
+    height: 12px;
+    width: 71px;
+    display: block;
+}
 @mixin phone {
     @media (min-width:#{$width-mobile}) and (max-width: #{$width-tablet - 1px}){
         @content
