--- a/src/scss/components/main/main.scss
+++ b/src/scss/components/main/main.scss
@@ -287,7 +287,7 @@
         }
     }
     .section-comment{
-        &__wrapper{
+        &__wrapper-sliders{
             width: 90%;
             overflow: hidden;
         }
