--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -28,6 +28,12 @@
     width: 100%;
     height: 48px;
     cursor: pointer;
+    &:hover{
+        box-shadow: 0px 4px 4px rgba(118, 184, 238, 0.53);
+    }
+    &:active{
+        box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
 }
 @mixin style-link {
     font-size: 16px;
